resources/assets/stylesheets/less/tables.less
/* ... */
table.withdetails {
    > tbody > tr:not(.details) > td:first-child {
        .background-icon('arr_1right', 'clickable');
        background-repeat: no-repeat;
        background-position: 2px center;
        padding-left: 20px;
        > a {
            margin-left: -20px;
            padding-left: 20px;
        }
    }
    > tbody > tr.open > td {
        background-color: fadeout(@light-gray-color, 80%);
    }
    > tbody > tr.open > td:first-child {
        .background-icon('arr_1down', 'clickable');
    }
    tr.details {
        display: none;
        max-height: 0px;
        overflow: hidden;
        transition: max-height 0.8s;
    }
    tr.open + tr.details {
        display: table-row;
        max-height: 200px;
        overflow: hidden;
        transition: max-height 0.8s;
        background-color: transparent !important;
        > td {
            padding-top: 0px;
            padding-bottom: 10px;
            > .detailscontainer {
                padding: 5px;
                border: 1px solid @table-header-color;
                margin-top: -1px;
                border-top-color: white;
            }
        }
    }
}
.no-js table.withdetails tr.details {
    display: table-row;
}

.sortable-dreieck(@direction) {
    &::after {
        background-repeat: no-repeat;
        content: ' ';
        display: inline-block;
        height: 16px;
        margin-left: 0;
        .retina-background-image('dreieck_@{direction}.png', 'dreieck_@{direction}@2x.png', 16px, 16px);
        vertical-align: text-top;
        width: 16px;
    }
}

.sortable-table {
    .header, .tablesorter-header:not(.sorter-false) {
        white-space: nowrap;

        color: @base-color;
        &:hover {
            color: @active-color;
            cursor: pointer;
        }
    }
    .headerSortUp, .tablesorter-headerDesc .tablesorter-header-inner {
        .sortable-dreieck('down');
        &::after {
            vertical-align: inherit;
        }
    }
    .headerSortDown, .tablesorter-headerAsc .tablesorter-header-inner {
        .sortable-dreieck('up');
        &::after {
            vertical-align: inherit;
        }
    }
    .tablesorter-headerUnSorted:not(.sorter-false) .tablesorter-header-inner {
        margin-right: 15px;
    }
}

// Schedule table
table#schedule_data {
    width: 100%;
    table-layout: fixed;
    thead {
        tr {
            td {
                text-align: center;
                vertical-align: top;
                background-color: @content-color-20;
                padding-right: 2px;
                padding: 0px;
                &:first-child {
                    width: 40px;
                }
            }
            &:first-child {
                td:first-child {
                    background-color: inherit;
                }
            }
        }
    }
    tbody {
        td:first-child {
            text-align: right;
            vertical-align: top;
            background-color: @content-color-20;
            padding-right: 2px;
            padding: 0px;
        }
    }
}

// Responsive helper
.table-scrollbox-horizontal {
  .scrollbox-horizontal();
}

//New table form for Course Search
table.course-search{
    @max-width-s: 8em;
    @max-width-m: 48em;
    @max-width-l: 100%;
    border: 1px solid @content-color-40;
    padding: 0px;
    border-top: 0;
    caption.legend {
        box-sizing: border-box;
        background-color: @fieldset-header;
        border: 1px solid @content-color-40;
        border-bottom: 0;
        color: @brand-color-dark;
        font-size: 12pt;
        font-weight: bold;
        line-height: 2em;
        padding: 0;
        text-align: left;
        text-indent: 15px;
    }
}

//Show Tree Table
table.show-tree {
    width:100%;
    padding: 0px 10px 10px 10px;
    td.b-top-va-center {
        border-top: 1px solid @content-color-40;
        padding-top: 10px;
        vertical-align:middle;
    }
    img[role=root-icon]{
        position: relative;
        top: 1px;
    }
    div.sem-root-icon{
        display: inline-block;
        vertical-align: top;
    }
    div.sem-path{
        display: inline-block;
        padding-left: 5px;
        div.sem-path-dir{
            // padding-left: 5px;
        }
        div.sem_path_info{
            // margin-left:30px;
            padding-top:10px;
            div.sem_path_title{
                font-weight: bold;
                font-size: 1.4em;
                margin: 3px 0px 5px 0px;
            }
            div.sem_path_text{
                padding-top:2px;
            }
        }
    }
    table.show-tree-kids{
        width: 100%;
        td.kids-tree-row{
            width: 50%;
        }
        ul.semtree{
            padding-left: 0px !important;
            a{
                padding-top: 5px !important;
                padding-bottom: 3px !important;
                padding-left: 14px !important;
                margin-left: -4px !important;
                display: block;
            }
            a:hover{
                background-color: @fieldset-header !important;
                color: @base-color !important;
            }
        }

    }
}

